--- a/notebooks_and_scripts/test_objected_oriented_watershed.ipynb
+++ b/notebooks_and_scripts/test_objected_oriented_watershed.ipynb
@@ -24,8 +24,7 @@
     "\n",
     "path_to_reaches = root_dir / \"AnnAGNPS_Reach_Data_Section.csv\"\n",
     "path_to_cells = root_dir / \"AnnAGNPS_Cell_Data_Section.csv\"\n",
-    "path_to_reaches_raster = root_dir / \"AnnAGNPS_Reach_IDs.asc\"\n",
-    "path_to_agflow_reaches = root_dir / \"AgFlow_Reach_Data.csv\""
+    "path_to_reaches_raster = root_dir / \"AnnAGNPS_Reach_IDs.asc\""
    ]
   },
   {
@@ -37,7 +36,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Reading Reaches: 100%|██████████| 3/3 [00:00<00:00, 85.10it/s]\n"
+      "Reading Reaches: 100%|██████████| 3/3 [00:00<00:00, 87.24it/s]\n"
      ]
     }
    ],
@@ -55,12 +54,12 @@
     "watershed.identify_inflow_sources()\n",
     "\n",
     "watershed.renumber_all_nodes_and_reaches_in_CCHE1D_computational_order()\n",
-    "watershed._set_node_id_to_compute_id()"
+    "watershed.set_node_id_to_compute_id()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -233,86 +232,6 @@
    ],
    "source": [
     "print(reach2.nodes[reach2.ds_nd_id])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-----------------------------\n",
-      "Reach            : 3\n",
-      "CCHE1D Ch. ID    : 2\n",
-      "Receiving Reach  : 2\n",
-      "Slope            : 0.01082\n",
-      "Strahler Number  : 1\n",
-      "Ignore?          : False\n",
-      "(US/DS) Nodes    : (280, 355)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(reach3)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Node order investigation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(\"debug.txt\", \"a\") as f:\n",
-    "    print(\n",
-    "        f\"Reach : {reach4.id}, usnd = {reach4.us_nd_id}, dsnd = {reach4.ds_nd_id}\",\n",
-    "        file=f,\n",
-    "    )\n",
-    "    for node in reach4.nodes.values():\n",
-    "        print(f\"{node.usid} --> {node.id} --> {node.dsid}\", file=f)\n",
-    "        # print(f\"{node.id} --> {node.dsid}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "D = {1: \"a\", 2: \"b\", 3: \"c\"}\n",
-    "\n",
-    "remap = {1: 4, 2: 5, 3: 6}\n",
-    "\n",
-    "D = {remap[k]: v for k, v in D.items()}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{4: 'a', 5: 'b', 6: 'c'}"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "D"
    ]
   }
  ],
