--- a/notebooks_and_scripts/test_objected_oriented_watershed.ipynb
+++ b/notebooks_and_scripts/test_objected_oriented_watershed.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,14 +29,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Reading Reaches: 100%|██████████| 3/3 [00:00<00:00, 87.24it/s]\n"
+      "Reading Reaches: 100%|██████████| 3/3 [00:00<00:00, 91.74it/s]\n"
      ]
     }
    ],
@@ -48,10 +48,10 @@
     "watershed.read_reaches_geometry_from_topagnps_asc_file(path_to_reaches_raster)\n",
     "\n",
     "watershed.assign_strahler_number_to_reaches()\n",
-    "watershed.ignore_reaches_with_strahler_leq(0)\n",
+    "watershed.ignore_reaches_with_strahler_leq(1)\n",
     "\n",
-    "watershed.update_junctions_and_node_types()\n",
     "watershed.identify_inflow_sources()\n",
+    "watershed.update_junctions_and_node_types()\n",
     "\n",
     "watershed.renumber_all_nodes_and_reaches_in_CCHE1D_computational_order()\n",
     "watershed.set_node_id_to_compute_id()"
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -68,28 +68,28 @@
      "text": [
       "-----------------------------\n",
       "Reach            : 2\n",
-      "CCHE1D Ch. ID    : 3\n",
+      "CCHE1D Ch. ID    : 1\n",
       "Receiving Reach  : 1\n",
       "Slope            : 0.01716\n",
       "Strahler Number  : 2\n",
       "Ignore?          : False\n",
-      "(US/DS) Nodes    : (356, 385)\n",
+      "(US/DS) Nodes    : (1, 30)\n",
       "-----------------------------\n",
       "Reach            : 3\n",
-      "CCHE1D Ch. ID    : 2\n",
+      "CCHE1D Ch. ID    : None\n",
       "Receiving Reach  : 2\n",
       "Slope            : 0.01082\n",
       "Strahler Number  : 1\n",
-      "Ignore?          : False\n",
-      "(US/DS) Nodes    : (280, 355)\n",
+      "Ignore?          : True\n",
+      "(US/DS) Nodes    : (None, None)\n",
       "-----------------------------\n",
       "Reach            : 4\n",
-      "CCHE1D Ch. ID    : 1\n",
+      "CCHE1D Ch. ID    : None\n",
       "Receiving Reach  : 2\n",
       "Slope            : 0.01332\n",
       "Strahler Number  : 1\n",
-      "Ignore?          : False\n",
-      "(US/DS) Nodes    : (1, 279)\n"
+      "Ignore?          : True\n",
+      "(US/DS) Nodes    : (None, None)\n"
      ]
     }
    ],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -123,12 +123,12 @@
      "text": [
       "-----------------------------\n",
       "Reach            : 2\n",
-      "CCHE1D Ch. ID    : 3\n",
+      "CCHE1D Ch. ID    : 1\n",
       "Receiving Reach  : 1\n",
       "Slope            : 0.01716\n",
       "Strahler Number  : 2\n",
       "Ignore?          : False\n",
-      "(US/DS) Nodes    : (356, 385)\n"
+      "(US/DS) Nodes    : (1, 30)\n"
      ]
     }
    ],
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -147,12 +147,12 @@
      "text": [
       "-----------------------------\n",
       "Reach            : 3\n",
-      "CCHE1D Ch. ID    : 2\n",
+      "CCHE1D Ch. ID    : None\n",
       "Receiving Reach  : 2\n",
       "Slope            : 0.01082\n",
       "Strahler Number  : 1\n",
-      "Ignore?          : False\n",
-      "(US/DS) Nodes    : (280, 355)\n"
+      "Ignore?          : True\n",
+      "(US/DS) Nodes    : (None, None)\n"
      ]
     }
    ],
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -171,12 +171,12 @@
      "text": [
       "-----------------------------\n",
       "Reach            : 4\n",
-      "CCHE1D Ch. ID    : 1\n",
+      "CCHE1D Ch. ID    : None\n",
       "Receiving Reach  : 2\n",
       "Slope            : 0.01332\n",
       "Strahler Number  : 1\n",
-      "Ignore?          : False\n",
-      "(US/DS) Nodes    : (1, 279)\n"
+      "Ignore?          : True\n",
+      "(US/DS) Nodes    : (None, None)\n"
      ]
     }
    ],
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -194,12 +194,12 @@
      "output_type": "stream",
      "text": [
       "-----------------------------\n",
-      "Node ID         : 356\n",
-      "TYPE            : 2\n",
-      "USID            : 355\n",
-      "DSID            : 357\n",
-      "US2ID           : 279\n",
-      "COMPUTEID       : 356\n",
+      "Node ID         : 1\n",
+      "TYPE            : 0\n",
+      "USID            : None\n",
+      "DSID            : 2\n",
+      "US2ID           : None\n",
+      "COMPUTEID       : 1\n",
       "(x,y)           : (240167.114013, 3795272.620724)\n",
       "(row,col)       : (227, 167)\n"
      ]
