--- a/notebooks_and_scripts/sandbox.ipynb
+++ b/notebooks_and_scripts/sandbox.ipynb
@@ -29,11 +29,11 @@
    "source": [
     "G = nx.DiGraph()\n",
     "\n",
-    "G.add_edge(5,4)\n",
-    "G.add_edge(4,3)\n",
-    "G.add_edge(3,2)\n",
-    "G.add_edge(2,1)\n",
-    "G.add_edge(1,0)\n",
+    "G.add_edge(5, 4)\n",
+    "G.add_edge(4, 3)\n",
+    "G.add_edge(3, 2)\n",
+    "G.add_edge(2, 1)\n",
+    "G.add_edge(1, 0)\n",
     "\n",
     "postorder = list(nx.dfs_postorder_nodes(G))\n",
     "# postorder = list(nx.dfs_preorder_nodes(G))\n",
@@ -68,8 +68,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "fig, ax = plt.subplots(1,1)\n",
-    "\n"
+    "fig, ax = plt.subplots(1, 1)"
    ]
   }
  ],
