--- a/notebooks_and_scripts/sandbox.ipynb
+++ b/notebooks_and_scripts/sandbox.ipynb
@@ -70,6 +70,24 @@
     "\n",
     "fig, ax = plt.subplots(1, 1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "D = {1: \"a\", 2: \"b\", 3: \"c\"}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in D.keys"
+   ]
   }
  ],
  "metadata": {
