--- a/notebooks_and_scripts/sandbox.ipynb
+++ b/notebooks_and_scripts/sandbox.ipynb
@@ -69,6 +69,61 @@
     "\n",
     "xs.define_trapz_cross_section_width_slope_elevation()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ws, zs, n_rgh = xs.ws, xs.zs, xs.n_rgh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[11, 12, 13]\n",
+      "[11, 12, 13]\n"
+     ]
+    }
+   ],
+   "source": [
+    "L = []\n",
+    "\n",
+    "start_count = 11\n",
+    "num = 3\n",
+    "posidx = list(range(start_count, start_count + num))\n",
+    "print(posidx)\n",
+    "\n",
+    "L.extend(range(start_count, start_count + 3))\n",
+    "print(L)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-43.0, -35.0, -13.0, -10.0, 10.0, 13.0, 35.0, 43.0]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[3 for _ in range(3)]"
+   ]
   }
  ],
  "metadata": {
