--- a/notebooks_and_scripts/sandbox.ipynb
+++ b/notebooks_and_scripts/sandbox.ipynb
@@ -107,22 +107,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[-43.0, -35.0, -13.0, -10.0, 10.0, 13.0, 35.0, 43.0]"
+       "WindowsPath('c:/Users/Luc/projects/topagnps2cche1d/notebooks_and_scripts')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[3 for _ in range(3)]"
+    "from pathlib import Path\n",
+    "\n",
+    "root = Path().cwd()\n",
+    "Path(root)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "WindowsPath('c:/Users/Luc/projects/topagnps2cche1d/notebooks_and_scripts')"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "file = root\n",
+    "file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "WindowsPath('c:/Users/Luc/projects/topagnps2cche1d/hello_channel.dat')"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "file.with_name(f\"{'hello'}_channel.dat\")"
    ]
   }
  ],
