debugging when ignoring reaches

--- a/notebooks_and_scripts/sandbox.ipynb
+++ b/notebooks_and_scripts/sandbox.ipynb
@@ -168,6 +168,41 @@
    "source": [
     "file.with_name(f\"{'hello'}_channel.dat\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Msg():\n",
+    "    def __init__(self, msg) -> None:\n",
+    "        self.msg = msg\n",
+    "\n",
+    "    def __str__(self) -> str:\n",
+    "        return self.msg\n",
+    "        pass\n",
+    "\n",
+    "msg_hello = Msg('hello')\n",
+    "msg_world = Msg('world')\n",
+    "\n",
+    "D = {1: msg_hello, 2: msg_world}\n",
+    "\n",
+    "a = D[1]\n",
+    "b = D[2]\n",
+    "\n",
+    "D = {}\n",
+    "\n",
+    "print(a)"
+   ]
   }
  ],
  "metadata": {
