Debugging and testing

--- a/notebooks_and_scripts/sandbox.ipynb
+++ b/notebooks_and_scripts/sandbox.ipynb
@@ -171,37 +171,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello\n"
+      "{1, 2, 3}\n",
+      "1\n",
+      "2\n",
+      "3\n"
      ]
     }
    ],
    "source": [
-    "class Msg():\n",
-    "    def __init__(self, msg) -> None:\n",
-    "        self.msg = msg\n",
+    "S = set()\n",
     "\n",
-    "    def __str__(self) -> str:\n",
-    "        return self.msg\n",
-    "        pass\n",
+    "S.add(1)\n",
+    "S.update([2,3])\n",
     "\n",
-    "msg_hello = Msg('hello')\n",
-    "msg_world = Msg('world')\n",
+    "print(S)\n",
     "\n",
-    "D = {1: msg_hello, 2: msg_world}\n",
-    "\n",
-    "a = D[1]\n",
-    "b = D[2]\n",
-    "\n",
-    "D = {}\n",
-    "\n",
-    "print(a)"
+    "for i in S:\n",
+    "    print(i)"
    ]
   }
  ],
