--- a/notebooks_and_scripts/test_objected_oriented_watershed.ipynb
+++ b/notebooks_and_scripts/test_objected_oriented_watershed.ipynb
@@ -70,13 +70,119 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Reading Reaches: 100%|██████████| 3/3 [00:00<00:00, 80.73it/s]"
+      "Reading Reaches: 100%|██████████| 3/3 [00:00<00:00, 81.80it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "AAA BEFORE RENUMBERING\n",
+      "Reach 2, Node: 1, ComputeID: None\n",
+      "Reach 2, Node: 2, ComputeID: None\n",
+      "Reach 2, Node: 3, ComputeID: None\n",
+      "Reach 2, Node: 4, ComputeID: None\n",
+      "Reach 2, Node: 5, ComputeID: None\n",
+      "Reach 2, Node: 6, ComputeID: None\n",
+      "Reach 2, Node: 7, ComputeID: None\n",
+      "Reach 2, Node: 8, ComputeID: None\n",
+      "Reach 2, Node: 9, ComputeID: None\n",
+      "Reach 2, Node: 10, ComputeID: None\n",
+      "Reach 2, Node: 11, ComputeID: None\n",
+      "Reach 2, Node: 12, ComputeID: None\n",
+      "Reach 2, Node: 13, ComputeID: None\n",
+      "Reach 2, Node: 14, ComputeID: None\n",
+      "Reach 2, Node: 15, ComputeID: None\n",
+      "Reach 2, Node: 16, ComputeID: None\n",
+      "Reach 2, Node: 17, ComputeID: None\n",
+      "Reach 2, Node: 18, ComputeID: None\n",
+      "Reach 2, Node: 19, ComputeID: None\n",
+      "Reach 2, Node: 20, ComputeID: None\n",
+      "Reach 2, Node: 21, ComputeID: None\n",
+      "Reach 2, Node: 22, ComputeID: None\n",
+      "Reach 2, Node: 23, ComputeID: None\n",
+      "Reach 2, Node: 24, ComputeID: None\n",
+      "Reach 2, Node: 25, ComputeID: None\n",
+      "Reach 2, Node: 26, ComputeID: None\n",
+      "Reach 2, Node: 27, ComputeID: None\n",
+      "Reach 2, Node: 28, ComputeID: None\n",
+      "Reach 2, Node: 29, ComputeID: None\n",
+      "Reach 2, Node: 30, ComputeID: None\n",
+      "Reach 3, Node: 31, ComputeID: None\n",
+      "Reach 3, Node: 32, ComputeID: None\n",
+      "Reach 3, Node: 33, ComputeID: None\n",
+      "Reach 3, Node: 34, ComputeID: None\n",
+      "Reach 3, Node: 35, ComputeID: None\n",
+      "Reach 3, Node: 36, ComputeID: None\n",
+      "Reach 3, Node: 37, ComputeID: None\n",
+      "Reach 3, Node: 38, ComputeID: None\n",
+      "Reach 3, Node: 39, ComputeID: None\n",
+      "Reach 3, Node: 40, ComputeID: None\n",
+      "Reach 3, Node: 41, ComputeID: None\n",
+      "Reach 3, Node: 42, ComputeID: None\n",
+      "Reach 3, Node: 43, ComputeID: None\n",
+      "Reach 3, Node: 44, ComputeID: None\n",
+      "Reach 3, Node: 45, ComputeID: None\n",
+      "Reach 3, Node: 46, ComputeID: None\n",
+      "Reach 3, Node: 47, ComputeID: None\n",
+      "Reach 3, Node: 48, ComputeID: None\n",
+      "Reach 3, Node: 49, ComputeID: None\n",
+      "Reach 3, Node: 50, ComputeID: None\n",
+      "Reach 3, Node: 51, ComputeID: None\n",
+      "Reach 3, Node: 52, ComputeID: None\n",
+      "Reach 3, Node: 53, ComputeID: None\n",
+      "Reach 3, Node: 54, ComputeID: None\n",
+      "Reach 3, Node: 55, ComputeID: None\n",
+      "Reach 3, Node: 56, ComputeID: None\n",
+      "Reach 3, Node: 57, ComputeID: None\n",
+      "Reach 3, Node: 58, ComputeID: None\n",
+      "Reach 3, Node: 59, ComputeID: None\n",
+      "Reach 3, Node: 60, ComputeID: None\n",
+      "Reach 3, Node: 61, ComputeID: None\n",
+      "Reach 3, Node: 62, ComputeID: None\n",
+      "Reach 3, Node: 63, ComputeID: None\n",
+      "Reach 3, Node: 64, ComputeID: None\n",
+      "Reach 3, Node: 65, ComputeID: None\n",
+      "Reach 3, Node: 66, ComputeID: None\n",
+      "Reach 3, Node: 67, ComputeID: None\n",
+      "Reach 3, Node: 68, ComputeID: None\n",
+      "Reach 3, Node: 69, ComputeID: None\n",
+      "Reach 3, Node: 70, ComputeID: None\n",
+      "Reach 3, Node: 71, ComputeID: None\n",
+      "Reach 3, Node: 72, ComputeID: None\n",
+      "Reach 3, Node: 73, ComputeID: None\n",
+      "Reach 3, Node: 74, ComputeID: None\n",
+      "Reach 3, Node: 75, ComputeID: None\n",
+      "Reach 3, Node: 76, ComputeID: None\n",
+      "Reach 3, Node: 77, ComputeID: None\n",
+      "Reach 3, Node: 78, ComputeID: None\n",
+      "Reach 3, Node: 79, ComputeID: None\n",
+      "Reach 3, Node: 80, ComputeID: None\n",
+      "Reach 3, Node: 81, ComputeID: None\n",
+      "Reach 3, Node: 82, ComputeID: None\n",
+      "Reach 3, Node: 83, ComputeID: None\n",
+      "Reach 3, Node: 84, ComputeID: None\n",
+      "Reach 3, Node: 85, ComputeID: None\n",
+      "Reach 3, Node: 86, ComputeID: None\n",
+      "Reach 3, Node: 87, ComputeID: None\n",
+      "Reach 3, Node: 88, ComputeID: None\n",
+      "Reach 3, Node: 89, ComputeID: None\n",
+      "Reach 3, Node: 90, ComputeID: None\n",
+      "Reach 3, Node: 91, ComputeID: None\n",
+      "Reach 3, Node: 92, ComputeID: None\n",
+      "Reach 3, Node: 93, ComputeID: None\n",
+      "Reach 3, Node: 94, ComputeID: None\n",
+      "Reach 3, Node: 95, ComputeID: None\n",
+      "Reach 3, Node: 96, ComputeID: None\n",
+      "Reach 3, Node: 97, ComputeID: None\n",
+      "Reach 3, Node: 98, ComputeID: None\n",
+      "Reach 3, Node: 99, ComputeID: None\n",
+      "Reach 3, Node: 100, ComputeID: None\n",
+      "Reach 3, Node: 101, ComputeID: None\n",
+      "Reach 3, Node: 102, ComputeID: None\n",
+      "Reach 3, Node: 103, ComputeID: None\n",
+      "Reach 3, Node: 104, ComputeID: None\n",
+      "Reach 3, Node: 105, ComputeID: None\n",
       "\n",
       " Before resampling\n",
       "Reach 2, Node: 105, ComputeID: 105\n",
@@ -184,6 +290,7 @@
       "Reach 3, Node: 73, ComputeID: 73\n",
       "Reach 3, Node: 74, ComputeID: 74\n",
       "Reach 3, Node: 75, ComputeID: 75\n",
+      "AAA BEFORE RENUMBERING\n",
       "Reach 2, Node: 76, ComputeID: None\n",
       "Reach 2, Node: 77, ComputeID: None\n",
       "Reach 2, Node: 78, ComputeID: None\n",
@@ -229,7 +336,7 @@
     "watershed.update_watershed()\n",
     "\n",
     "print(\"\\n Before resampling\")\n",
-    "watershed._print_reaches_node_ids()\n",
+    "watershed._print_reaches_node_ids(computeidnone=False)\n",
     "\n",
     "# print('Resampling reaches')\n",
     "watershed.resample_reaches(id_list=\"all\", numpoints=3)\n",
@@ -237,7 +344,7 @@
     "watershed.assign_cross_section_to_all_points()\n",
     "\n",
     "print(\"\\nAfter resampling\")\n",
-    "watershed._print_reaches_node_ids()"
+    "watershed._print_reaches_node_ids(computeidnone=False)"
    ]
   },
   {
