--- a/notebooks_and_scripts/test_small_object_watershed.ipynb
+++ b/notebooks_and_scripts/test_small_object_watershed.ipynb
@@ -205,7 +205,7 @@
     "\n",
     "# It's important to ignore reaches BEFORE proper junctions are defined\n",
     "reach4.ignore_reach()\n",
-    "#-----------------------------------------------\n",
+    "# -----------------------------------------------\n",
     "watershed.update_graph()\n",
     "\n",
     "watershed.update_junctions_and_node_types()\n",
@@ -215,7 +215,7 @@
     "\n",
     "watershed.renumber_all_nodes_and_reaches_in_CCHE1D_computational_order()\n",
     "watershed.set_node_id_to_compute_id()\n",
-    "#----------------------------------------------\n",
+    "# ----------------------------------------------\n",
     "# df_nodes = watershed.create_cche1d_nodes_df()\n",
     "# watershed.resample_reaches(id=\"all\", numpoints=21)\n",
     "\n",
@@ -410,7 +410,9 @@
     "\n",
     "casename = \"small_junction_one_removed\"\n",
     "watershed.write_cche1d_dat_files(\n",
-    "    casename=casename, output_folder=f\"C:/Users/Luc/Desktop/test_top2cche1d/{casename}/\", sep=\"\\t\"\n",
+    "    casename=casename,\n",
+    "    output_folder=f\"C:/Users/Luc/Desktop/test_top2cche1d/{casename}/\",\n",
+    "    sep=\"\\t\",\n",
     ")"
    ]
   },
