--- a/notebooks_and_scripts/sandbox.ipynb
+++ b/notebooks_and_scripts/sandbox.ipynb
@@ -189,12 +189,43 @@
     "S = set()\n",
     "\n",
     "S.add(1)\n",
-    "S.update([2,3])\n",
+    "S.update([2, 3])\n",
     "\n",
     "print(S)\n",
     "\n",
     "for i in S:\n",
     "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = {1: \"a\", 2: \"b\"}\n",
+    "\n",
+    "u = A.pop(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{2: 'b'}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A"
    ]
   }
  ],
