asjusting cross sections needs debugging

--- a/notebooks_and_scripts/test_objected_oriented_watershed.ipynb
+++ b/notebooks_and_scripts/test_objected_oriented_watershed.ipynb
@@ -64,17 +64,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Reading Reaches: 100%|██████████| 910/910 [10:40<00:00,  1.42it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "watershed = t2c.Watershed()\n",
     "watershed.import_topagnps_reaches_network(path_to_reaches)\n",
@@ -107,7 +99,8 @@
     "\n",
     "watershed.resample_reaches(id_list=\"all\", step=30)\n",
     "\n",
-    "watershed.assign_cross_section_to_all_points()"
+    "watershed.assign_cross_section_to_all_points()\n",
+    "watershed.adjust_cross_sections_elevation_with_slope()"
    ]
   },
   {
@@ -280,7 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
