--- a/notebooks_and_scripts/sandbox.ipynb
+++ b/notebooks_and_scripts/sandbox.ipynb
@@ -229,11 +229,11 @@
     "\n",
     "G = nx.MultiDiGraph()\n",
     "\n",
-    "G.add_edge(2,1)\n",
-    "G.add_edge(3,1)\n",
-    "G.add_edge(4,2)\n",
-    "G.add_edge(5,3)\n",
-    "G.add_edge(6,3)\n",
+    "G.add_edge(2, 1)\n",
+    "G.add_edge(3, 1)\n",
+    "G.add_edge(4, 2)\n",
+    "G.add_edge(5, 3)\n",
+    "G.add_edge(6, 3)\n",
     "\n",
     "\n",
     "nx.draw(G, with_labels=True)"
