--- a/notebooks_and_scripts/sandbox.ipynb
+++ b/notebooks_and_scripts/sandbox.ipynb
@@ -258,6 +258,68 @@
    "source": [
     "list(nx.bfs_tree(G.reverse(), 1))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from topagnps2cche1d.tools import path_crawler\n",
+    "import numpy as np\n",
+    "import networkx as nx\n",
+    "\n",
+    "I = np.array([[1, 0, 0, 0, 0],\n",
+    "              [0, 1, 0, 0, 0],\n",
+    "              [0, 1, 0, 0, 0],\n",
+    "              [0, 0, 1, 1, 0],\n",
+    "              [0, 0, 0, 1, 1]])\n",
+    "\n",
+    "(rows, cols) = np.nonzero(I)\n",
+    "\n",
+    "rowcols = [(row, col) for row, col in zip(rows, cols)]\n",
+    "\n",
+    "G = path_crawler(rowcols)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(0, 0), (4, 4)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "extremities = [rowcol for rowcol in G.nodes() if nx.degree(G, rowcol) <= 1]\n",
+    "\n",
+    "print(extremities)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, 0), (1, 1), (2, 1), (3, 2), (3, 3), (4, 3), (4, 4)]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(nx.dfs_preorder_nodes(G, (0,0)))"
+   ]
   }
  ],
  "metadata": {
